Add reactor energy input, item input, and item output blocks that share their respective handlers with the reactor controller. Refactor ReactorShape to be slightly more generic with a ReactorType enum. Add disabled PowerState so that disabled is when the multiblock/block is setup incorrectly and off is when it is but there is no power.